# CalCurve

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md
Source/: CurveFIR.cpp  CurveFIR.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
cmake/: msvc-local-toolchain.cmake
tools/: vst3_smoke_test.cpp
